--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8">
   <title>Jasmine's 16th Birthday</title>
   <!-- For Dreamweaver preview -->
-<link rel="stylesheet" href="../static/css/style.css">
-
-<!-- For Flask live server -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
