--- a/index.html
+++ b/index.html
@@ -19,12 +19,8 @@
   </section>
 
   <main>
-    <p>Click below to upload your favorite moments from the party!</p>
-    
-    <div class="button-wrapper">
-      <a href="upload.html" class="upload-button">Upload Photos</a>
-	</div>
-	  <p>Click to view your photos here</p>
+  
+	  <p>Click to view & download photos here</p>
 	  <a href="gallery.html" class="gallery-button">View Photo Gallery</a>
   
 </main>
