--- a/gallery.html
+++ b/gallery.html
@@ -1,24 +1,111 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Jasmine's Birthday Gallery</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Jasmine’s Birthday Gallery</title>
+
+  <!-- Optional: keep your site-wide CSS; this page also has its own minimal CSS -->
+  <style>
+    :root { --gap: 12px; --radius: 10px; --maxw: 1100px; }
+    * { box-sizing: border-box; }
+    body { margin: 0; padding: 24px; background: #faf9f7; font-family: system-ui, Arial, sans-serif; color: #222; }
+    .wrap { max-width: var(--maxw); margin: 0 auto; }
+    h1 { margin: 0 0 12px; font-size: 1.8rem; }
+    p.sub { margin: 0 0 24px; color: #555; }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: var(--gap);
+    }
+    figure {
+      margin: 0;
+      background: #fff;
+      border-radius: var(--radius);
+      overflow: hidden;
+      box-shadow: 0 2px 10px rgba(0,0,0,.06);
+      display: flex;
+      flex-direction: column;
+    }
+    figure a { line-height: 0; }
+    figure img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+      display: block;
+    }
+    figcaption {
+      display: flex; align-items: center; justify-content: space-between; gap: 8px;
+      padding: 10px 12px; font-size: .95rem;
+    }
+    .btn {
+      border: 1px solid #ddd; border-radius: 8px; padding: 6px 10px;
+      font-size: .9rem; background: #f7f7f7; text-decoration: none; color: inherit;
+    }
+    .btn:hover { background: #eee; }
+    @media (max-width: 520px) { figure img { height: 160px; } }
+  </style>
 </head>
 <body>
-  <section class="gallery-background">
-    <div class="gallery-heading-box">
-      <h1>Magical Memories Gallery</h1>
-      <p>Click any photo to view or use the button to download.</p>
-    </div>
+  <div class="wrap">
+    <h1>Jasmine’s Birthday Gallery</h1>
+    <p class="sub">Tap any photo to view full size. Use “Download” to save a copy.</p>
 
-    <div class="gallery-grid">
-      <p>No photos yet. Check back soon!</p>
-    </div>
+    <div id="gallery" class="gallery" aria-live="polite"></div>
+  </div>
 
-    <p style="margin-top:24px;">
-      <a class="gallery-button" href="index.html">← Back to Home</a>
-    </p>
-  </section>
+  <!-- Manifest with a PHOTOS array like:
+       const PHOTOS = ['images/gallery/DSC00041.jpg', 'images/gallery/IMG_0115.jpeg', ...];
+  -->
+  <script src="gallery_manifest.js"></script>
+  <script>
+    // Fallback in case the manifest is missing
+    const LIST = (typeof PHOTOS !== "undefined") ? PHOTOS : [];
+
+    // Generate a readable caption from the filename
+    function captionFromPath(p) {
+      const f = p.split('/').pop();
+      return f.replace(/\.(jpe?g|png|webp)$/i, '').replace(/[_-]/g, ' ');
+    }
+
+    const container = document.getElementById('gallery');
+
+    LIST.forEach(src => {
+      const fig = document.createElement('figure');
+
+      // Clickable image opens the full-size photo in a new tab
+      const link = document.createElement('a');
+      link.href = src;
+      link.target = '_blank';
+      link.rel = 'noopener';
+
+      const img = document.createElement('img');
+      img.src = src;
+      img.loading = 'lazy';
+      img.decoding = 'async';
+      img.alt = captionFromPath(src);
+
+      link.appendChild(img);
+      fig.appendChild(link);
+
+      // Caption + download button
+      const capRow = document.createElement('figcaption');
+      const cap = document.createElement('span');
+      cap.textContent = captionFromPath(src);
+
+      const dl = document.createElement('a');
+      dl.href = src;
+      dl.download = '';
+      dl.className = 'btn';
+      dl.textContent = 'Download';
+
+      capRow.appendChild(cap);
+      capRow.appendChild(dl);
+      fig.appendChild(capRow);
+
+      container.appendChild(fig);
+    });
+  </script>
 </body>
 </html>
